--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8" /><title>Khedmni</title></head><body><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>خدمني - Khedmni</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1 data-lang="ar">خدمني - منصة ربط الحرفيين في وهران</h1>
+    <h1 data-lang="fr" style="display:none;">Khedmni - Plateforme des artisans à Oran</h1>
+    <h1 data-lang="en" style="display:none;">Khedmni - Oran's Artisan Platform</h1>
+    <select id="languageSwitcher">
+      <option value="ar">العربية</option>
+      <option value="fr">Français</option>
+      <option value="en">English</option>
+    </select>
+  </header>
+  <main>
+    <section>
+      <p data-lang="ar">اكتشف أفضل الحرفيين المحليين واحجز خدماتهم بسهولة.</p>
+      <p data-lang="fr" style="display:none;">Découvrez les meilleurs artisans locaux et réservez leurs services facilement.</p>
+      <p data-lang="en" style="display:none;">Discover the best local artisans and book their services easily.</p>
+    </section>
+  </main>
+  <script src="script.js"></script>
+</body>
+</html>
